==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/driver/uart_driver/pic32/UartDrv.c <==
#include "./UartDrv_priv.h"
#include "trace.h"
#include "tp_hwsetup_pic32.h" //GetPeripheralClock()
#include "product.config"
#include "bsp.h"
#include "DmaDrv.h"
#define UART_DMA_TMP_BUFF_SIZE  4*1024

void UartDrv_Write_Blocking(eTpUartDevice uartId, const uint8 *buffer, uint32 size)
{
    while(size)
    {
        while(!UARTTransmitterIsReady(uartId))
            ;

        UARTSendDataByte(uartId, *buffer);

        buffer++;
        size--;
    }

    while(!UARTTransmissionHasCompleted(uartId))
        ;
}

void UartDrv_Ctor(cUartDrv* me, const tUARTDevice* pConfig , cRingBuf* pTx, cRingBuf* pRx)
{
    ASSERT(me);
    ASSERT(pConfig);
    ASSERT(pConfig->deviceInfo.deviceType == UART_DEV_TYPE);
    /* init UART structure */
    if(uartDrvList[pConfig->uartId] == NULL)
    {
        UartDrv_Init(pConfig->uartId);
        uartDrvList[pConfig->uartId] = me;
        me->pConfig = pConfig;
        me->pTx         = pTx;
        me->pRx         = pRx;
        me->pTxCallback = NULL;
        me->pRxCallback = NULL;
        me->cummulativeHwRxBufOverrun = 0;

        uartDrvStatus[me->pConfig->uartId].txDataFlag = TX_DATA_EMPTY;
        uartDrvStatus[me->pConfig->uartId].txStatus   = TP_SUCCESS;
        uartDrvStatus[me->pConfig->uartId].rxStatus   = TP_SUCCESS;

        /* init Microchip hardware */
        UARTConfigure(me->pConfig->uartId,
                        UART_ENABLE_HIGH_SPEED          // BRGH
                        | UART_ENABLE_PINS_TX_RX_ONLY   // UEN
                        );

        // Set UART Tx/Rx interrupt
        UARTSetFifoMode(me->pConfig->uartId,
                        UART_INTERRUPT_ON_RX_NOT_EMPTY    // URXISEL<1:0>
        #ifndef UART_DRV_BLOCKING
                        | UART_INTERRUPT_ON_TX_BUFFER_EMPTY   // UTXISEL<1:0>
        #endif
                        );

        #ifndef UART_DRV_BLOCKING
        INTClearFlag(INT_SOURCE_UART_TX(me->pConfig->uartId));
        INTEnable(INT_SOURCE_UART_TX(me->pConfig->uartId), INT_DISABLED); // IEC1bits.U1TXIE = 0;
        #endif

        if(FALSE == me->pConfig->dmaEnable)
        {
            INTClearFlag(INT_SOURCE_UART_RX(me->pConfig->uartId));
            INTEnable(INT_SOURCE_UART_RX(me->pConfig->uartId), INT_ENABLED);
        }
#ifdef UART_HAS_DMA_SUPPORT
        else
        {
            INTClearFlag(INT_SOURCE_UART_RX(me->pConfig->uartId));
            INTEnable(INT_SOURCE_UART_RX(me->pConfig->uartId), INT_DISABLED);
        }
#endif
        // Set the Line Control mode
        UartDrv_SetLineControlMode(me->pConfig);

        // Set the Baud Rate
        UartDrv_SetBaudRate(me->pConfig);

        // Set Interrupt Vector Priority
        INTSetVectorPriority(INT_VECTOR_UART(me->pConfig->uartId), me->pConfig->interrupt.priority );
        INTSetVectorSubPriority(INT_VECTOR_UART(me->pConfig->uartId), me->pConfig->interrupt.subPriority );

        // Enable the UART
        UARTEnable(me->pConfig->uartId, UART_ENABLE_FLAGS(UART_PERIPHERAL // ON
                                                    | UART_TX       // UTXEN
                                                    | UART_RX));       // URXEN
#ifdef UART_HAS_DMA_SUPPORT
        if(TRUE == me->pConfig->dmaEnable)
        {
            /* init DMA UART TX channel */
            pDmaUartTXObj[me->pConfig->uartId] = DmaDrv_Ctor();
            DmaDrv_InitDmaObj(pDmaUartTXObj[me->pConfig->uartId],uartTXIrq[me->pConfig->uartId]);
            DmaDrv_RegisterIntHandlerCb(pDmaUartTXObj[me->pConfig->uartId],UartDrv_DmaTxIntCb);
            /* init DMA UART RX channel */
            volatile uint8 *rxreg = (uint8 *)(&U1RXREG);
            rxreg += UART_X_REG_OFFSET * (me->pConfig->uartId);
            pDmaUartRXObj[me->pConfig->uartId] = DmaDrv_Ctor();
            DmaDrv_InitDmaObj(pDmaUartRXObj[me->pConfig->uartId],uartRXIrq[me->pConfig->uartId]);
            DmaDrv_RegisterIntHandlerCb(pDmaUartRXObj[me->pConfig->uartId],UartDrv_DmaRxIntCb);
            DmaDrv_SetTxBuffer(pDmaUartRXObj[me->pConfig->uartId], (void*)rxreg, (void*)(&uartRxByte[me->pConfig->uartId]), 1, 1, 1);
            DmaDrv_TriggerTransfer(pDmaUartRXObj[me->pConfig->uartId]);
        }
#endif
    }
    else
    {
        ASSERT(FALSE);
        /* Are we trying to re-int the same uart driver? */
    }
}

void UartDrv_Xtor(cUartDrv* me)
{
    ASSERT(me && (me->pConfig));
#ifdef UART_HAS_DMA_SUPPORT
    if(TRUE == me->pConfig->dmaEnable)
    {
        DmaDrv_Xtor(pDmaUartTXObj[me->pConfig->uartId]);
        DmaDrv_Xtor(pDmaUartRXObj[me->pConfig->uartId]);
    }
#endif
    // PIC32 register
    INTEnable(INT_SOURCE_UART_TX(me->pConfig->uartId), INT_DISABLED);
    INTEnable(INT_SOURCE_UART_RX(me->pConfig->uartId), INT_DISABLED);
    UARTEnable(me->pConfig->uartId, UART_PERIPHERAL | UART_DISABLE);

    RingBuf_Reset(me->pTx);
    RingBuf_Reset(me->pRx);
    uartDrvList[me->pConfig->uartId] = NULL;
    UartDrv_Deinit(me->pConfig->uartId);
}

uint32 UartDrv_Write(cUartDrv* me, const uint8 *p, uint32 size)
{
    eTpRet ret = TP_SUCCESS;
    int i;
    ASSERT(me);
    ASSERT(me->pConfig && p && me->pTx);
    if(size == 0)
    {
        return 0;
    }
#ifdef UART_DRV_BLOCKING
    UartDrv_Write_Blocking(me->pConfig->uartId, p, size);
#else

    for(i=0 ; i<size ; i++)
    {
        /* pushing the data into the queue byte by byte such that we will not stop 
         * the IRQ from working for a prolonged period of time, even we are pushing huge amount
         * of data into the buffer.
         */
        INTEnable(INT_SOURCE_UART_TX(me->pConfig->uartId), INT_DISABLED); // IEC1bits.U1TXIE = 0;
        ret = RingBuf_Push(me->pTx, p+i, 1);
        if(ret != TP_SUCCESS)
        {
            ret = TP_FAIL;
            break;
        }
        INTEnable(INT_SOURCE_UART_TX(me->pConfig->uartId), INT_ENABLED); // IEC1bits.U1TXIE = 0;

    }
#endif

    return ret;
}
