==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/driver/uart_driver/stm32f1/UartDrv.c <==
#include "stm32f10x.h"
#include "./UartDrv_priv.h"
#include "trace.h"
#include "product.config"
#define MIN(a,b) (((a)<(b))?(a):(b))

void UartDrv_Write_Blocking(eTpUartDevice uart, const uint8 *buffer, uint32 size)
{
    ASSERT(NUM_OF_UART > uart);
    USART_TypeDef *u = gUartMap[uart];

    while(size)
    {
        while(USART_GetFlagStatus(u, USART_FLAG_TXE) == RESET)
            ;

        USART_SendData(u, *buffer);

        buffer++;
        size--;
    }

    while(USART_GetFlagStatus(u, USART_FLAG_TXE) == RESET)
        ;
}

void UartDrv_Ctor(cUartDrv *me, const tUARTDevice *pConfig , cRingBuf *pTx, cRingBuf *pRx)
{
    ASSERT(me && pConfig && (pConfig->deviceInfo.deviceType == UART_DEV_TYPE));
    /* init UART structure */
    if(uartDrvList[pConfig->uartId] == NULL)
    {
        USART_TypeDef* uartBaseAddr;
        UartDrv_Init(pConfig->uartId);
        uartDrvList[pConfig->uartId] = me;
        me->pConfig     = pConfig;
        me->pTx         = pTx;
        me->pRx         = pRx;
        me->pTxCallback = NULL;
        me->pRxCallback = NULL;

        uartDrvStatus[me->pConfig->uartId].txDataFlag = TX_DATA_EMPTY;
        uartDrvStatus[me->pConfig->uartId].txStatus   = TP_SUCCESS;

        /* init STM32F0 hardware */
        USART_InitTypeDef init;
        ASSERT(TP_UART_BYTE_SIZE_MAX > pConfig->byteSize);
        ASSERT(TP_UART_PARITY_MAX > pConfig->parity);
        ASSERT(TP_UART_STOP_BIT_MAX > pConfig->stopBits);

        init.USART_BaudRate             = pConfig->baudrate;
        init.USART_WordLength           = gUartWordLength[pConfig->byteSize];
        init.USART_Parity               = gUartParity[pConfig->parity];
        init.USART_StopBits             = gUartStopBits[pConfig->stopBits];
        init.USART_HardwareFlowControl  = USART_HardwareFlowControl_None;
        init.USART_Mode                 = USART_Mode_Rx | USART_Mode_Tx;

        uartBaseAddr = UartDrv_getUartBaseAddr(me);
        USART_Init(uartBaseAddr, &init);
        /* Configure the wake up Method = Start bit */
#ifdef PORT_TO_STM32F1
        //USART_StopModeWakeUpSourceConfig(uartBaseAddr, USART_WakeUpSource_RXNE);
#endif
        USART_Cmd(uartBaseAddr,ENABLE);

#ifndef UART_DRV_BLOCKING
        UartDrv_EnableIRQ(me);
#endif  // UART_DRV_BLOCKING
    }
    else
    {
        /* Are we trying to re-int the same uart driver? */
        ASSERT(0);
    }
}

void UartDrv_Xtor(cUartDrv *me)
{
    ASSERT(me &&(me->pConfig));
    USART_TypeDef *uartBaseAddr = UartDrv_getUartBaseAddr(me);

    // STM32F0 register
    USART_Cmd(uartBaseAddr, DISABLE);

    RingBuf_Reset(me->pTx);
    RingBuf_Reset(me->pRx);
    uartDrvList[me->pConfig->uartId] = NULL;
    UartDrv_Deinit(me->pConfig->uartId);
}

uint32 UartDrv_Write(cUartDrv *me, const uint8 *p, uint32 size)
{
    uint32 ret = TP_SUCCESS;
    ASSERT(me && (me->pConfig) && (me->pRx) && p && size);
    USART_TypeDef *uartBaseAddr = UartDrv_getUartBaseAddr(me);
#ifdef UART_DRV_BLOCKING
    UartDrv_Write_Blocking(me->pConfig->uartId, p, size);
#else   // !UART_DRV_BLOCKING
    ret = RingBuf_Push(me->pTx, p, size);
    if (uartDrvStatus[me->pConfig->uartId].txDataFlag == TX_DATA_EMPTY)
    {
        uartDrvStatus[me->pConfig->uartId].txDataFlag = TX_DATA_BUSY;
        USART_ITConfig(uartBaseAddr, USART_IT_TXE, ENABLE);
    }
#endif  // UART_DRV_BLOCKING

    return ret;
}
